# symbol-calc

./: CHANGELOG.md  LICENSE  README.md  symbol-calc.cabal
app/: Main.hs
src/: Calculus.hs  Expression.hs  Number.hs  Parser.hs
src/Abstract/: Group.hs
