cabal-version:      3.0
name:               symbol-calc
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Lqnk4
maintainer:         internalbeast109@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Calculus
        Expression
        Parser
        Number
        Abstract.Group
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.1, 
        megaparsec ^>=9.7.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable symbol-calc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        symbol-calc

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite symbol-calc-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        symbol-calc
